tests/baselines/reference/contextualSignatureInstantiationWithTypeParameterConstrainedToOuterTypeParameter.errors.txt
tests/cases/compiler/contextualSignatureInstantiationWithTypeParameterConstrainedToOuterTypeParameter.ts(6,11): error TS2345: Argument of type '""' is not assignable to parameter of type 'W'.


==== tests/cases/compiler/contextualSignatureInstantiationWithTypeParameterConstrainedToOuterTypeParameter.ts (1 errors) ====
    function f<T>() {
        function g<U extends T>(u: U): U { return null }
        return g;
    }
    var h: <V, W>(v: V, func: (v: V) => W) => W;
    var x = h("", f<string>()); // Call should succeed and x should be string. All type parameters should be instantiated to string
              ~~
!!! error TS2345: Argument of type '""' is not assignable to parameter of type 'W'.